--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -53,6 +53,10 @@ jobs:
             echo "Unable to determine package manager"
             exit 1
           fi
+      - uses: pnpm/action-setup@v2
+        if: ${{ steps.detect-package-manager.outputs.manager == 'pnpm' }}
+        with:
+          version: 8.3.1
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -76,9 +80,6 @@ jobs:
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
-      - name: Setup pnpm (if needed)
-        if: ${{ steps.detect-package-manager.outputs.manager == 'pnpm' }}
-        run: npm install -g pnpm
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
