--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "resend": "^3.2.0",
     "sharp": "^0.33.2"
   },
   "devDependencies": {
