feat: Initial blog implementation

--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "pages:build": "npx @cloudflare/next-on-pages"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.1.0",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/mdx": "^2.0.11",
     "gsap": "^3.12.5",
     "next": "latest",
     "react": "latest",
