--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.1.0",
+    "@next/third-parties": "^14.1.3",
     "gsap": "^3.12.5",
     "next": "latest",
     "react": "latest",
